--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>html5唯美爱情表白动画网页代码</title>
+<title>MyLove</title>
 <link type="text/css" rel="stylesheet" href="renxi/default.css">
 <script type="text/javascript" src="renxi/jquery.min.js"></script>
 <script type="text/javascript" src="renxi/jscex.min.js"></script>
@@ -38,7 +38,7 @@
         <span class="say">因为我太啰嗦了，所以你离开了我</span><br>
         <span class="say">虽然你看不见我的告白，但是我还是要把这些心里话说出来</span><br>
         <span class="say"> </span><br>
-        <span class="say"><span class="space"></span> -- 爱你的仁希--</span> </font>
+        <span class="say"><span class="space"></span> -- 爱你的Bill.Pei--</span> </font>
         </p>
       </div>
     </div>
@@ -208,7 +208,7 @@
     </script>
 
 <div style="text-align:center;">
-<p>来源：<a href="http://www.mycodes.net/" title="源码之家" target="_blank">源码之家</a></p>
+<p>来源：<a href="https://billpei.github.io/MyLove/" title="BillPay" target="_blank">裴兵兵</a></p>
 </div>
 
 </body>
