--- a/index.html
+++ b/index.html
@@ -29,20 +29,23 @@
   <div id="error">本页面采用HTML5编辑，目前您的浏览器无法显示，请换成谷歌(Chrome)或者火狐(Firefox)浏览器，或者其他游览器的最新版本。</div>
   <div id="wrap">
     <div id="text">
-      <div id="code"> <font color="#FF0000"> <span class="say">亲爱的小宝宝，我爱你，虽然你看不见我对你的告白</span><br>
+      <div id="code"> <font color="#FF0000"> <span class="say">叶子，你好！也许你会很惊讶，也许会很平静</span><br>
         <span class="say"> </span><br>
-        <span class="say"> 我知道我不会甜言蜜语，但是我会用行动证明一切</span><br>
+        <span class="say"> 我知道我做了许多错事，也曾一度失去了你，甚至差点连朋友都没得做</span><br>
         <span class="say"> </span><br>
-        <span class="say">你说我啰嗦，有些东西因为越在乎所以越失去</span><br>
-        <span class="say">因为我太爱你了，所以我失去你了</span><br>
-        <span class="say">因为我太啰嗦了，所以你离开了我</span><br>
-        <span class="say">虽然你看不见我的告白，但是我还是要把这些心里话说出来</span><br>
+        <span class="say">你说我对你隐瞒太多，有些东西因为越在乎所以越不愿你担心</span><br>
+        <span class="say">因为我的愚蠢，所以我失去你了</span><br>
+        <span class="say">因为我的过错，所以你离开了我</span><br>
+        <span class="say">也许这辈子都不能亲手给你幸福，但没什么比你的笑更美</span><br>
+	<span class="say">今天是感恩节，真的谢谢你陪我这么久！</span><br>
+	<span class="say">曾经短信词语间的互动，不是一味的思，而是一味的念</span><br>
+	<span class="say">最后，真的恭喜你通过了司法考试，离梦想近了一步</span><br>
         <span class="say"> </span><br>
-        <span class="say"><span class="space"></span> -- 爱你的Bill.Pei--</span> </font>
+        <span class="say"><span class="space"></span> -- 猪一样的Bill.Pei--</span> </font>
         </p>
       </div>
     </div>
-    <div id="clock-box"> <span class="STYLE1"></span><font color="#33CC00">亲爱的小宝宝，我喜欢你</font> <span class="STYLE1">已经是……</span>
+    <div id="clock-box"> <span class="STYLE1"></span><font color="#33CC00">傻傻的小叶子叶子，认识你</font> <span class="STYLE1">已经是……</span>
       <div id="clock"></div>
     </div>
     <canvas id="canvas" width="1100" height="680"></canvas>
