--- a/index.html
+++ b/index.html
@@ -31,15 +31,16 @@
     <div id="text">
       <div id="code"> <font color="#FF0000"> <span class="say">叶子，你好！也许你会很惊讶，也许会很平静</span><br>
         <span class="say"> </span><br>
-        <span class="say"> 我知道我做了许多错事，也曾一度失去了你，甚至差点连朋友都没得做</span><br>
+        <span class="say">我知道我做了许多错事，也曾一度失去了你，甚至差点连朋友都没得做</span><br>
         <span class="say"> </span><br>
         <span class="say">你说我对你隐瞒太多，有些东西因为越在乎所以越不愿你担心</span><br>
         <span class="say">因为我的愚蠢，所以我失去你了</span><br>
         <span class="say">因为我的过错，所以你离开了我</span><br>
-        <span class="say">也许这辈子都不能亲手给你幸福，但没什么比你的笑更美</span><br>
+        <span class="say">也许这辈子都不能亲手给你幸福，但没什么比你的笑更美,更能让人心动！</span><br>
 	<span class="say">今天是感恩节，真的谢谢你陪我这么久！</span><br>
-	<span class="say">曾经短信词语间的互动，不是一味的思，而是一味的念</span><br>
-	<span class="say">最后，真的恭喜你通过了司法考试，离梦想近了一步</span><br>
+	<span class="say">曾经短信词语间的互动，不是一味的思，而是一味的念！</span><br>
+	<span class="say">真心的替你高兴，恭喜你通过了司法考试，离梦想近了一步</span><br>
+	<span class="say">春风沉醉的夜晚，喜欢上你，从此东南西北风一样了，清晨也是也晚了，不想你也是想你了！</span><br>
         <span class="say"> </span><br>
         <span class="say"><span class="space"></span> -- 猪一样的Bill.Pei--</span> </font>
         </p>
@@ -181,7 +182,7 @@
 
         var textAnimate = eval(Jscex.compile("async", function () {
 		    var together = new Date();
-		    together.setFullYear(2010,1 , 15); 			//时间年月日
+		    together.setFullYear(2011,8 , 20); 			//时间年月日
 		    together.setHours(16);						//小时	
 		    together.setMinutes(53);					//分钟
 		    together.setSeconds(0);					//秒前一位
