--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>MyLove</title>
+<title>Thanks MyLove</title>
 <link type="text/css" rel="stylesheet" href="renxi/default.css">
 <script type="text/javascript" src="renxi/jquery.min.js"></script>
 <script type="text/javascript" src="renxi/jscex.min.js"></script>
@@ -35,18 +35,20 @@
         <span class="say"> </span><br>
         <span class="say">你说我对你隐瞒太多，有些东西因为越在乎所以越不愿你担心</span><br>
         <span class="say">因为我的愚蠢，所以我失去你了</span><br>
+	<span class="say"> </span><br>
         <span class="say">因为我的过错，所以你离开了我</span><br>
         <span class="say">也许这辈子都不能亲手给你幸福，但没什么比你的笑更美,更能让人心动！</span><br>
 	<span class="say">今天是感恩节，真的谢谢你陪我这么久！</span><br>
 	<span class="say">曾经短信词语间的互动，不是一味的思，而是一味的念！</span><br>
 	<span class="say">真心的替你高兴，恭喜你通过了司法考试，离梦想近了一步</span><br>
 	<span class="say">春风沉醉的夜晚，喜欢上你，从此东南西北风一样了，清晨也是也晚了，不想你也是想你了！</span><br>
+	<span class="say">遇见你，真好！</span><br>
         <span class="say"> </span><br>
         <span class="say"><span class="space"></span> -- 猪一样的Bill.Pei--</span> </font>
         </p>
       </div>
     </div>
-    <div id="clock-box"> <span class="STYLE1"></span><font color="#33CC00">傻傻的小叶子叶子，认识你</font> <span class="STYLE1">已经是……</span>
+    <div id="clock-box"> <span class="STYLE1"></span><font color="#33CC00">傻傻的小叶子，认识你</font> <span class="STYLE1">已经是……</span>
       <div id="clock"></div>
     </div>
     <canvas id="canvas" width="1100" height="680"></canvas>
@@ -211,7 +213,7 @@
     })();
     </script>
 <div style="text-align:center;">
-<p>来源：<a href="http://www.mycodes.net/" title="Bill.Pay" target="_blank">裴兵兵</a></p>
+<p>作者：<a href="https://billpei.github.io/MyLove/" title="Bill.Pay" target="_blank">裴兵兵</a></p>
 </div>
 </body>
 </html>
