--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 	<span class="say">春风沉醉的夜晚，喜欢上你，从此东南西北风一样了，清晨也是也晚了，不想你也是想你了！</span><br>
 	<span class="say">遇见你，真好！</span><br>
         <span class="say"> </span><br>
-        <span class="say"><span class="space"></span> -- 猪一样的Bill.Pei--</span> </font>
+        <span class="say"><span class="space"></span> --猪一样的Bill.Pei--</span> </font>
         </p>
       </div>
     </div>
-    <div id="clock-box"> <span class="STYLE1"></span><font color="#33CC00">傻傻的小叶子，认识你</font> <span class="STYLE1">已经是……</span>
+    <div id="clock-box"> <span class="STYLE1"></span><font color="#33CC00">傻傻的小叶子，与你相识</font> <span class="STYLE1">已经是……</span>
       <div id="clock"></div>
     </div>
     <canvas id="canvas" width="1100" height="680"></canvas>
@@ -213,7 +213,7 @@
     })();
     </script>
 <div style="text-align:center;">
-<p>作者：<a href="https://billpei.github.io/MyLove/" title="Bill.Pay" target="_blank">裴兵兵</a></p>
+<p>TO：<a href="https://billpei.github.io/MyLove/" title="Bill.Pay" target="_blank">可爱的叶盼</a></p>
 </div>
 </body>
 </html>
