--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
         <span class="say"> </span><br>
         <span class="say">我知道我做了许多错事，也曾一度失去了你，甚至差点连朋友都没得做</span><br>
         <span class="say"> </span><br>
-        <span class="say">你说我对你隐瞒太多，有些东西因为越在乎所以越不愿你担心</span><br>
-        <span class="say">因为我的愚蠢，所以我失去你了</span><br>
-	<span class="say"> </span><br>
-        <span class="say">因为我的过错，所以你离开了我</span><br>
-        <span class="say">也许这辈子都不能亲手给你幸福，但没什么比你的笑更美,更能让人心动！</span><br>
 	<span class="say">今天是感恩节，真的谢谢你陪我这么久！</span><br>
+        <span class="say">你说我对你隐瞒太多，有些东西因为越在乎所以越不愿你担心</span><br>
+        <span class="say">因为我的愚蠢，所以我失去了你</span><br>
+        <span class="say">因为我的过错，所以你离开了我</span><br>
+	<span class="say"> </span><br>
+        <span class="say">也许这辈子都不能亲手给你幸福，但没什么比你的笑更美,更能让人心动！</span><br>
 	<span class="say">曾经短信词语间的互动，不是一味的思，而是一味的念！</span><br>
 	<span class="say">真心的替你高兴，恭喜你通过了司法考试，离梦想近了一步</span><br>
 	<span class="say">春风沉醉的夜晚，喜欢上你，从此东南西北风一样了，清晨也是也晚了，不想你也是想你了！</span><br>
