--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <span class="say">也许这辈子都不能亲手给你幸福，但没什么比你的笑更美,更能让人心动！</span><br>
 	<span class="say">曾经短信词语间的互动，不是一味的思，而是一味的念！</span><br>
 	<span class="say">真心的替你高兴，恭喜你通过了司法考试，离梦想近了一步</span><br>
-	<span class="say">春风沉醉的夜晚，喜欢上你，从此东南西北风一样了，清晨也是也晚了，不想你也是想你了！</span><br>
-	<span class="say">遇见你，真好！</span><br>
+	<span class="say">春风沉醉的夜晚，喜欢上你，从此东南西北风一样了，清晨也是夜晚了，不想你也是想你了！</span><br>
+	<span class="say">遇见你，真好！真幸运！</span><br>
         <span class="say"> </span><br>
         <span class="say"><span class="space"></span> --猪一样的Bill.Pei--</span> </font>
         </p>
